more cleaning, Proofreading, and light logic changes.